fix protocol alignement on timeline

--- a/src/frontend/web_application/src/scenes/Timeline/components/DiscussionItem/style.scss
+++ b/src/frontend/web_application/src/scenes/Timeline/components/DiscussionItem/style.scss
@@ -92,10 +92,6 @@ $s-discussion-item__spacing: 0.5rem;
     text-overflow: ellipsis;
     text-align: right;
     white-space: nowrap;
-
-    @include breakpoint(medium) {
-      flex: 1 0 10rem;
-    }
   }
 
   &__select {
